fix double scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,6 @@ html.dark {
 }
 
 html {
-  overflow-y: scroll;
   scrollbar-gutter: stable;
   scroll-behavior: smooth;
   color-scheme: light;
